--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starter</title>
+    <title>Weather</title>
 </head>
 <body>
+    <form>
+        <label for="location">Enter the city:</label>
+        <input type="" name="location" id="location">
+    </form>
+
+    <div class="weather">
+        <span>Current temperature is : </span>
+        <span class="temp"></span>
+    </div>
 </body>
 </html>
